# Pyne-Case

./: pyproject.toml
Pyne-Case/: README.md  tasks.py
Pyne-Case/dockerfiles/: train.dockerfile
Pyne-Case/docs/: mkdocs.yaml
Pyne-Case/tests/: test_data.py
dockerfiles/: api.dockerfile
docs/source/: index.md
notebooks/: EDA.ipynb
